--- a/assets/locales/fr.json
+++ b/assets/locales/fr.json
@@ -64,11 +64,15 @@
     "wrong_user_or_pass": "Nom d'utilisateur ou mot de passe incorrect"
   },
   "backup": {
+    "backup_location": "Emplacement de la sauvegarde",
     "destination": "Destination de sauvegarde",
+    "destinations": "Destinations des sauvegardes",
     "duration": "Durée de sauvegarde",
     "last_failure": "Dernière sauvegarde échouée",
     "last_failure_msg": "Message",
-    "last_success": "Dernière sauvegarde réussie"
+    "last_success": "Dernière sauvegarde réussie",
+    "location_name": "Nom de l'emplacement",
+    "kind": "Type de sauvegarde"
   },
   "battery": {
     "life_remaining": "Durée restante de la batterie __percent__%"
@@ -77,6 +81,7 @@
 	"all_ok": "Aucun périphérique Bluetooth avec batterie faible",
 	"apple_wireless_keyboard": "Clavier Apple sans fil",
 	"apple_wireless_trackpad": "Trackpad Apple sans fil",
+	"apple_wireless_mouse": "Souris Apple sans fil",
 	"apple_magic_mouse": "Apple Magic Mouse",
     	"bluetooth": "Bluetooth",
 	"bluetooth_battery_widget": "État de la batterie Bluetooth",
@@ -100,10 +105,40 @@
   },
   "buildversion": "N° de version",
   "caching": {
-    "bytes_served": "Caching – Octets servis",
-    "from_origin": "Depuis origine",
-    "from_peers": "Depuis peers",
-    "from_cache": "Depuis cache"
+	"bytesdropped": "Octets supprimés",
+	"bytesfromcachetoclients": "Octets du cache vers les clients",
+	"bytesfromcachetopeers": "Octets du cache vers peers",
+	"bytesfromorigintoclients": "Octets depuis l'origine vers les clients",
+	"bytesfromorigintopeers": "Octets depuis l'origine vers peers",
+	"bytesfrompeerstoclients": "Octets depuis peers vers les clients",
+	"bytesimportedbyxpc": "Octets importés par XPC",
+	"bytesimportedbyhttp": "Octets importés par HTTP",
+	"bytespurgedtotal": "Total des octets purgés",
+	"bytespurgedyoungerthan1day": "Octets purgés de moins d'un jour",
+	"bytespurgedyoungerthan7days": "Octets purgés de moins de 7 jours",
+	"bytespurgedyoungerthan30days": "Octets purgés de moins de 30 jours",
+    	"bytes_served": "Caching – Octets servis",
+	"client_requests": "Demandes des clients",
+	"client_tab_title": "Mise en cache du serveur",
+	"date": "Date",
+	"from_origin": "Depuis origine",
+	"from_peers": "Depuis Peers",
+	"from_cache": "Depuis Cache",
+	"importsbyhttp": "Imports par HTTP",
+	"importsbyxpc": "Imports par XPC",
+	"peer_requests": "Demandes des Peers",
+	"purged_1": "Purgés de moins d'un jour",
+	"purged_7": "Purgés de moins de 7 jours",
+	"purged_30": "Purgés de moins de 30 jours",
+	"repliesfromcachetoclients": "Réponses depuis le cache vers les clients",
+	"repliesfromcachetopeers": "Réponses depuis le cache vers peers",
+	"repliesfrompeerstoclients": "Réponses depiuis peers vers les clients",
+	"repliesfromorigintoclients": "Réponse depuis l'origine vers les clients",
+	"repliesfromorigintopeers": "Réponses depuis l'origine vers les peers",
+	"reporttitle": "Rapport mise en cache du serveur",
+	"requestsfromclients": "Demandes depuis les clients",
+	"requestsfrompeers": "Demande depuis peers",
+	"total_purged": "Total purgé"
   },
   "cert": {
 		"expiré": "__name__ expired __moment__"
@@ -203,12 +238,51 @@
   "disabled": "Désactivé",
   "disconnected": "Déconnecté",
   "displays": {
-    "displays": "Moniteurs",
+	"internal": "Built-In",
+    	"displays": "Moniteurs",
+	"display_serial": "Numéro de série",
+	"external": "Externe",
+	"vendor": "Vendeur",
+	"model": "Modèle",
+	"manufactured": "Date de fabrication",
+	"native": "NRésolution native",
+	"timestamp": "Dernière connexion",
+	"type": "Type",
     "widget_info": "Nombre total d'écrans externes connus",
-    "widget_title": "Nombre d'écrans"
+"widget_title": "Nombre d'écrans"
+},
+"directoryservice": {
+		"clienttabtitle": "Service d'annuaire",
+		"which_directory_service": "Service d'annuaire utilisé",
+		"directory_service_comments": "Commentaires Active Directory",
+		"adforest": "Forêt Active Directory",
+		"addomain": "Domaine Active Directory",
+		"computeraccount": "Compte d'ordinateur",
+		"user_experience": "Options avancées - Expérience utilisateur",
+		"createmobileaccount": "Créer un compte mobile lors de l'ouverture de session",
+		"requireconfirmation": "Exiger une confirmation",
+		"forcehomeinstartup": "Forcer l'utilisation du répertoire de départ sur le disque de démarrage",
+		"mounthomeassharepoint": "Monter le répertoire de départ comme un point de partage",
+		"usewindowsuncpathforhome": "Utiliser le chemin UNC pour déduire l'emplacement du répertoire de départ réseau",
+		"networkprotocoltobeused": "Protocole réseau utilisé",
+		"defaultusershell": "Shell utilisateur par défaut",
+		"mappings": "Options avancées - Mappages",
+		"mappinguidtoattribute": "Mappage UID à attribuer",
+		"mappingusergidtoattribute": "Mappage du GID utilisateur à attribuer",
+		"mappinggroupgidtoattr": "Mappage du GID du groupe à attribuer",
+		"generatekerberosauth": "Générer l'autorité Kerberos",
+		"administrative": "Options avancées - Administratif",
+		"preferreddomaincontroller": "Préférer ce serveur de domaine",
+		"allowedadmingroups": "Permettre l'administration par le groupe administrateurs",
+		"authenticationfromanydomain": "Authentification depuis n'importe quel domaine",
+		"packetsigning": "Signature des paquets",
+		"packetencryption": "Cryptage des paquets",
+		"passwordchangeinterval": "Intervalle de changement de mot de passe",
+		"restrictdynamicdnsupdates": "Limiter les mises à jour DNS dynamiques",
+		"namespacemode": "Espace de noms"
   },
  "ds": {
-		"computername": "Nom d'ordinateur",
+	"computername": "Nom d'ordinateur",
         "architecture": "Architecture",
         "dstudio-auto-disable": "Désactivation auto",
         "dstudio-auto-reset-workflow": "Initialisation Auto Workflow",
@@ -234,7 +308,8 @@
         "dstudio-last-workflow-execution-date": "Date d'exécution du dernier workflow",
         "dstudio-last-workflow-status": "Etat Workflow",
         "dstudio-mac-addr": "Adresse MAC",
-        "recheck": "Données DeployStudio"
+        "recheck": "Données DeployStudio",
+	"report": "Rapport DeployStudio"
     },
   "displayname": "Nom d'affichage",
    "edit": "Modifier",
@@ -265,7 +340,17 @@
   "failed": "Echoué",
   "failing": "Défaillant !",
   "filevault": {
-    "users": "Utilisateurs avec FileVault actif",
+"status_last_checkin": "Statut à partir de ",
+		"enableddate": "Activer la date",
+		"encrypted": "Crypté",
+		"filevault_users": "Utilisateur(s) activé(s)",
+		"recoverykey": "Clé de récupération personnelle",
+		"lvguuid": "Groupe de volumes logiques UUID",
+		"lvuuid": "Volume logique UUID",
+		"pvuuid": "Volume physique UUID",
+		"hddserial": "N° série du disque dur",
+		"unencrypted": "Décrypté",
+"users": "Utilisateurs avec FileVault actif",
     "widget": {
       "title": "État Filevault 2"
     }
@@ -364,7 +449,23 @@
       "title": "Rapport Certificats"
     },
     "checkin": "Enregistrement",
-    "computername": "Nom",
+"computername": "Name",
+	"directoryservice": {
+        "boundstatus": "Etat liaison",
+        "ad_domain": "Domaine AD",
+        "computeraccount": "Compte d'ordinateur",
+        "ad_comments": "Commentaires AD",
+        "mobileaccount": "Compte mobile",
+        "networkprotocol": "Protocole réseau",
+	"admin_groups": "Groupes admin autorisés"
+	},
+"displays": {
+	"detected": "Détecté",
+	"machineserial": "N° de série",
+        "model": "Modèle",
+        "nativeresolution": "Résolution native",
+	"vendor": "Vendeur"
+    },
     "hardware": {
       "description": "Description"
     },
@@ -379,6 +480,21 @@
       "pending_install_plural": "Installations en attente",
       "pending_removal": "Suppression en attente",
       "pending_removal_plural": "Suppressions en attente"
+},
+"power": {
+      	"capacity": "Capacité (mAh)",
+	"charged": "Chargée %",
+        "condition": "Condition",
+        "current": "Actuel (mAh)",
+        "cycles": "Cycles",
+        "designed": "Conçu pour (mAh)",
+        "health": "Santé %",
+        "failedbattery": "Batterie endommagée",
+        "manufactured": "Fabriquée"
+        },
+"profile": {
+	"payload": "Payloads",
+        "profilename": "Nom du profil"
     },
     "timemachine": {
       "duration": "Durée de sauvegarde",
@@ -388,6 +504,10 @@
       "title": "Rapport Time Machine"
     },
     "username": "Nom utilisateur",
+ "warranty": {
+ 	"purchased": "Acheté",
+	"expires": "Expiration de la garantie"
+        },
     "wifi": {
       "apmode": "Mode AP",
       "authtype": "Type Auth 802.11X",
@@ -411,6 +531,7 @@
     "latitudeaccuracy": "Précision Latitude",
     "longitude": "Longitude",
     "longitudeaccuracy": "Précision Longitude",
+	"never": "Jamais",
     "report": "Rapport Localisation",
     "stalelocation": "Localisation obsolète"
   },
@@ -431,8 +552,9 @@
 		"report": "Rapport installations managées",
 		"title": "Installation managées"
 	},
-  "manifest": {
-    "name": "Nom du manifest"
+"manifest": {
+	"manifest": "Manifest",
+    	"name": "Nom du manifest"
   },
   "memory": {
     "memory": "Mémoire",
@@ -455,6 +577,22 @@
     "warning_plural": "__count__ Alertes de Munki",
     "additional_info": "Informations additionnelles Munki"
   },
+"munkiinfo": {
+		"softwarerepourl": "URL répertoire logiciels",
+		"duration": "Durée",
+		"applecatalog": "URL catalogue Apple",
+		"manifest": "Manifest",
+		"localonlymanifest": "Manifest uniquement local",
+		"start": "Démarrage"
+	},
+"munkireportinfo": {
+		"baseurl": "URL MunkiReport",
+		"clienttabtitle": "MunkiReport",
+		"passphrase": "Passphrase",
+		"reportitems": "Modules installés",
+		"reporttitle": "Rapport MunkiReport",
+		"version": "Version"
+	},
   "name": "Nom",
   "nav": {
     "admin": {
@@ -473,6 +611,7 @@
       "ard": "Apple Remote Desktop",
       "bluetooth": "Bluetooth",
       "backup2go": "Archiware Backup2Go",
+      "caching": "Mise en cache",
       "clients": "Clients",
       "certificate": "Certificats",
       "deploystudio": "DeployStudio",
@@ -485,13 +624,16 @@
       "inventory": "Inventaire",
       "location": "Localisation",
       "munki": "Munki",
+      "mrinfo": "MunkiReport",
       "network": "Réseau",
       "power": "Alimentation",
       "printers": "Imprimantes",
       "profile": "Profils",
       "sccm_status": "Etat SCCM",
       "security": "Sécurité",
+      "softwareupdate": "Mise à jour logiciels",
       "timemachine": "Time Machine",
+      "usb": "Périphériques USB",
       "warranty": "Garantie",
       "wifi": "WiFi"
     },
@@ -504,15 +646,28 @@
     "reports": {
 "appVersions": "Versions des Apps",
       "backup": "Sauvegarde",
+      "backup2go" : "Backup2Go",
+      "caching": "Mise en cache",
       "clients": "Client",
       "configuration": "Configuration",
+      "directoryservice": "Services d'annuaire",
+      "disk": "Disque",
       "findmymac": "FindMyMac",
+      "gsx": "GSX",
       "hardware": "Matériel",
       "location": "Localisation",
       "munki": "Munki",
       "network": "Réseau",
+      "peripheral": "Périphériques",
       "power": "Alimentation",
-      "backup2go" : "Backup2go"
+      "printer": "Imprimantes",
+      "profile": "Profils",
+      "sccm": "Etat agent SCCM",
+      "security": "Securité",
+      "server": "Serveur",
+      "warranty": "Garantie",
+      "wifi": "WiFi"
+
     },
     "user": {
       "logout": "Se déconnecter"
@@ -529,7 +684,8 @@
     "traffic": "Trafic réseau",
     "inbound_traffic": "Trafic entrant",
     "outbound_traffic": "Trafic sortant",
-    "remote_ip": "Adresse IP distante"
+    "remote_ip": "Adresse IP distante",
+    "service": "Service"
   },
   "new_client": "Nouveau client",
 	"new_client_plural": "Nouveaux clients",
@@ -574,6 +730,17 @@
 		},
   "pkg_failed_to_install": "L'installation de __pkg__ a échouée : __reason__",
   "pkg_failed_to_install_plural": "L'installation de __count__ paquet(s) échouée",
+  "power": {
+		"manufacture_date": "Fabriquée",
+		"design_capacity": "Capacité prévue (mAh)",
+		"max_capacity": "Capacité pleine charge (mAh)",
+		"max_percent": "Santé %",
+		"current_capacity": "Charge restante (mAh)",
+		"current_percent": "Chargée %",
+		"cycle_count": "Nombre de cycles",
+		"temperature": "Température",
+		"condition": "Condition"
+	},
 "ratio": "Ratio",
   "reg_date": "Date d'enregistrement",
   "remote_control": "Contrôle à distance",
@@ -583,7 +750,11 @@
   "printer": {
     "default_set": "Ensemble par défaut",
     "driver_version": "Version du pilote",
+    "error": "Erreur",
+    "idle": "Inactive",
+    "in_use": "Utilisé",
     "name": "Nom de l'imprimante",
+    "offline": "Hors ligne",
     "ppd": "PPD",
     "printer_sharing": "Partage d'imprimantes",
     "printer_status": "État de l'imprimante",
@@ -642,6 +813,28 @@
     "smc_version": "Version de la SMC",
     "boot_rom_version": "Version du Boot ROM"
   },
+"softwareupdate": {
+		"automaticcheckenabled": "Vérification auto activée",
+		"automaticdownload": "Téléchargement automatique",
+		"catalogurl": "URL Catalogue",
+		"clienttabtitle": "Mise à jour logiciels",
+		"configdatainstall": "Installation XProtect automatique",
+		"criticalupdateinstall": "Installations critiques",
+		"inactiveupdates": "Mise à jour ignorées",
+		"lastattemptsystemversion": "Version soumise",
+		"lastbackgroundccdsuccessfuldate": "Date de réussite CCD",
+		"lastbackgroundsuccessfuldate": "Date de réussite",
+		"lastfullsuccessfuldate": "Date de réussite complète",
+		"lastrecommendedupdatesavailable": "Mises à jour disponibles recommandées",
+		"lastresultcode": "Code résultat",
+		"lastsessionsuccessful": "Session réussie",
+		"lastsuccessfuldate": "Date de réussite",
+		"lastupdatesavailable": "Mises à jour disponibles",
+		"mrxprotect": "Installation XProtect",
+		"reporttitle": "Rapport mises à jour logiciels",
+		"skiplocalcdn": "Ignorer le CDN local",
+		"recommendedupdates": "Mises à jour recommandées"
+	},
   "status": "État",
   "storage": {
     "bus_protocol": "Protocole BUS",
@@ -684,13 +877,31 @@
     "timemachine": "Time Machine"
   },
   "total_clients": "Nombre Clients",
-"trackpad": "Trackpad",
+  "trackpad": "Trackpad",
   "type": "Type",
   "unavailable": "Indisponible",
   "unauthorized": "Vous n'êtes pas autorisé",
   "unencrypted": "Non chiffré",
   "unknown": "Inconnu",
   "unsupported": "Non pris en charge",
+"usb": {
+		"bus_power": "Disponible mAh",
+		"bus_power_used": "Utilisé mAh",
+		"camera": "Camera",
+		"clienttab": "Périphériques USB",
+		"device_speed": "Protocole USB",
+		"extra_current_used": "Extra mAh",
+		"internal": "Interne",
+		"manufacturer": "Fabricant",
+		"media": "Disque externe",
+		"name": "Nom périphérique",
+		"nousb": "Pas de périphériques USB détectés",
+		"reporttitle": "Périphériques USB",
+		"title": "Clavier et souris",
+		"type": "Type de périphérique",
+		"usbtype": "Type de périphérique USB",
+		"vendor_id": "ID Vendeur"
+	},  
   "uptime": "En fonction depuis",
   "user": {
     "user": "Utilisateur",
@@ -707,6 +918,7 @@
     "est_purchase_date": "Date d'achat estimée",
     "expired": "Expirée le __date__",
     "expires_in": "Expire le __date__",
+"installed_memory_title": "Mémoire installée",
     "no_alerts": "Aucune alerte de garantie",
     "recheck": "Retest de l'état de la garantie",
     "supported_no_applecare": "Pris en charge jusqu'à __date__. Pas d'Applecare",
@@ -731,6 +943,11 @@
       "notbound": "Non lié",
       "info": "Cumuls depuis que ces données sont collectées",
       "title": "Lié à un service d'annuaire"
+},
+"caching": {
+	"graph_title": "Historique des octets mis en cache",
+	"title": "Octets mis en cache",
+	"tooltip": "Données qui ont été diffusées à partir du serveur de mise en cache OS X Server"
     },
     "certificate": {
       "expired": "Expiré",
@@ -795,6 +1012,7 @@
 			"tooltip": "Installation en attente pour cette semaine"
 		},
     "power": {
+"check": "Test de la batterie",
 "health": {
 				"title": "Etat de santé de la batterie",
 				"tooltip": "Etat de santé de la batterie"
@@ -807,6 +1025,9 @@
       "nobattery": "Pas de batterie",
 	"title": "Etat de la batterie",
 			"tooltip": "Etat de la batterie"
+},
+"registered": {
+    	"title": "Enregistrement du client au fil du temps"
     },
     "timemachine": {
       "lastweek": "Dernière sauvegarde effectuée il y a plus d'une journée",
@@ -814,8 +1035,8 @@
       "today": "Sauvegardé aujourd'hui",
       "week_plus": "Dernière sauvegarde effectuée il y a plus d'une semaine",
       "b2g_ok": "Dernière sauvegarde de 2 semaines",
-	  "b2g_warning": "Dernière sauvegarde de 4 semaines",
-	  "b2g_danger": "Dernière sauvegarde de plus de 4 semaines"
+      "b2g_warning": "Dernière sauvegarde de 4 semaines",
+      "b2g_danger": "Dernière sauvegarde de plus de 4 semaines"
 },
 		"unknown": {
 			"alert": "Ce widget ne peut être trouvé",
